--- a/blog-web/src/main/resources/application.yml
+++ b/blog-web/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     url: jdbc:mysql://localhost:3306/blog?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     platform: mysql
     type: com.alibaba.druid.pool.DruidDataSource
     dbcp2:
