--- a/blog-web/src/main/resources/application.yml
+++ b/blog-web/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   mail:
     host: smtp.qq.com
     username: 670115782@qq.com
-    password: xokelagxfllmbegj
+    password: nvjyqdkscropbfha
   datasource:
     url: jdbc:mysql://localhost:3306/blog?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
     username: root
