--- a/blog-web/src/main/resources/application.yml
+++ b/blog-web/src/main/resources/application.yml
@@ -55,3 +55,8 @@ pagehelper:
 
 #激活地址
 activation-address: http://localhost:8080/#/msg?urlState=urlInvalid&param={1}
+
+#管理员账号密码
+admin:
+  username: admin
+  password: liu133297
