--- a/blog-web/src/main/resources/application-prod.yml
+++ b/blog-web/src/main/resources/application-prod.yml
@@ -29,7 +29,7 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
-#    password: liu133297
+    password: liu133297
     jedis:
       pool:
         max-active: 8
