--- a/blog-web/src/main/resources/application-prod.yml
+++ b/blog-web/src/main/resources/application-prod.yml
@@ -54,7 +54,7 @@ pagehelper:
 
 
 #激活地址
-activation-address: http://localhost:8080/#/msg?urlState=urlInvalid&param={1}
+activation-address: http://liuzwei.top/#/msg?urlState=urlInvalid&param={1}
 
 #管理员账号密码
 admin:
