--- a/blog-web/src/main/resources/application-prod.yml
+++ b/blog-web/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ spring:
     password: nvjyqdkscropbfha
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/blog?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
-    username: root
+    username: blog
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
     platform: mysql
