--- a/blog-web/src/main/resources/application-prod.yml
+++ b/blog-web/src/main/resources/application-prod.yml
@@ -54,7 +54,7 @@ pagehelper:
 
 
 #激活地址
-activation-address: http://liuzwei.top/#/msg?urlState=urlInvalid&param={1}
+activation-address: http://liuzwei.top:6090/#/msg?urlState=urlInvalid&param={1}
 
 file:
   uploadPath: /www/wwwroot/blog/file/
