--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <!-- 环境信息 -->
     <profiles>
-        <!-- 标机开发环境 -->
+        <!--开发环境 -->
         <profile>
             <id>dev</id>
             <properties>
@@ -35,7 +35,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
-        <!-- 标机开发环境 -->
+        <!-- 生产环境 -->
         <profile>
             <id>prod</id>
             <properties>
