--- a/blog-web/src/main/resources/application-prod.yml
+++ b/blog-web/src/main/resources/application-prod.yml
@@ -2,9 +2,15 @@ server:
   port: 9000
 spring:
   mail:
+    port: 465
     host: smtp.qq.com
     username: 670115782@qq.com
     password: nvjyqdkscropbfha
+    properties:
+      mail:
+        smtp:
+          ssl:
+            enable: true
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/blog?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
     username: blog
